[package]
name = "jeremy"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/jozefdransfield/jeremy"
description = "Jeremy is a tool to frame iOS screenshots with the device bezel"
license = "MIT"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
image = "0.25.6"
resvg = "0.45.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
